--- a/nimscintilla.cfg
+++ b/nimscintilla.cfg
@@ -1,11 +1,11 @@
 [n.global]
-output = nimscin
+output = nimscintilla
 
 [n.include]
-nimscin
-nimscin/scintilla/include
-nimscin/scintilla/src
-nimscin/scintilla/lexlib
+nimscintilla
+nimscintilla/scintilla/include
+nimscintilla/scintilla/src
+nimscintilla/scintilla/lexlib
 
 [n.prepare]
 download = "https://www.scintilla.org/scintilla410.zip"
@@ -16,11 +16,11 @@ defines = true
 
 recurse = true
 
-compile-win.1 = """nimscin/scintilla/win32/*.cxx"""
-compile-lin.1 = """nimscin/scintilla/gtk/*.cxx"""
-compile.2 = """nimscin/scintilla/src/*.cxx"""
-compile.3 = """nimscin/scintilla/lexlib/*.cxx"""
-compile.4 = """nimscin/scintilla/lexers/*.cxx"""
+compile-win.1 = """nimscintilla/scintilla/win32/*.cxx"""
+compile-lin.1 = """nimscintilla/scintilla/gtk/*.cxx"""
+compile.2 = """nimscintilla/scintilla/src/*.cxx"""
+compile.3 = """nimscintilla/scintilla/lexlib/*.cxx"""
+compile.4 = """nimscintilla/scintilla/lexers/*.cxx"""
 
 pragma.c = "passC: \"--std=c++17 -DNDEBUG\""
 pragma-win.l = "passL: \"-lgdi32 -luser32 -limm32 -lole32 -luuid -loleaut32 -lmsimg32 -lstdc++\""
